# GeneratorKeysHex

./: .gitignore  pyproject.toml
desing/: texto.py
generatorKeyHex/: FolderDocument.py  formatOutput.py  main.py
menu/: menu.py
osDef/: osDef.py
src/config/: config.py
src/generatorKeyHex/: FolderDocument.py  formatOutput.py  main.py
src/generatorkeyshex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/menu/: menu.py
